fix: align header text for mobile

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -50,6 +50,7 @@ $social-image-size: 24px;
 
   &__text {
     color: text-color("dark");
+    font-size: 0.75rem;
     margin: 0;
 
     &--link {
